--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40,11 +40,11 @@ strong {
   font-weight: bolder;
 }
 
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
+.top-3 {
+    top: 0.75rem;
+}
+.right-3 {
+    right: 0.75rem;
 }
 
 small {
@@ -1198,266 +1198,11 @@ body.active {
   font-family: "Lato";;
 }
 
-/* .focus-radio-basic__cont {
-  border: solid 1px #e8e8e8;
-  border-radius: 150px;
-  grid-template-columns: 40px 1fr;
-}
-
-.focus-radio-basic__checked {
-  pointer-events: none;
-  border: 1px solid #d2d2d2;
-}
-
-.focus-radio-basic__name {
-  color: #797979;
-  font-size: 15px;
-  font-family: "Lato";
-}
-
-.focus-radio-basic__checked::after {
-  content: "";
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  opacity: 0;
-}
-
-.focus-radio-basic__input:checked ~ .focus-radio-basic__cont .focus-radio-basic__name {
-  color: #b56b41;
-}
-
-.focus-other-person {
-  padding: 25px;
-  border: 1px solid #eaeaea;
-  border-radius: 8px;
-}
-.focus-other-person .focus-form__group {
-  margin-bottom: 20px;
-} */
-/*
-.focus-radio-pay__cont {
-  border: solid 1px #e8e8e8;
-  border-radius: 150px;
-  padding: 12px 20px;
-  grid-template-columns: 35px 1fr;
-  grid-template-rows: 1fr 1fr;
-}
-@media screen and (min-width: 1100px) {
-  .focus-radio-pay__cont {
-    grid-template-columns: 35px 1fr 1fr;
-    grid-template-rows: auto;
-  }
-}
-@media screen and (max-width: 1100px) {
-  .focus-radio-pay__cont g.focus-radio-pay__left {
-    grid-area: 1/1/2/2;
-  }
-  .focus-radio-pay__cont .focus-radio-pay__middle {
-    grid-area: 1/2/2/3;
-  }
-  .focus-radio-pay__cont .focus-radio-pay__right {
-    grid-area: 2/1/3/3;
-  }
-  .focus-radio-pay__cont .focus-radio-pay__right .focus-radio-pay__images {
-    justify-content: flex-start;
-    padding-left: 35px;
-    margin-top: 5px;
-    height: 20px;
-  }
-}
-
-.paso-3-pay .focus-form__group {
-  font-family: "Lato";;
-  font-size: 13px;
-  margin-bottom: 0;
-  margin-top: 0;
-}
-.paso-3-pay .focus-form__group h3 {
-  margin-bottom: 10px;
-  margin-top: 30px;
-}
-.paso-3-pay .focus-form__row {
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
-.focus-radio-pay__name {
-  font-family: "Lato";
-  color: #2c2c2c;
-  font-size: 14px;
-  line-height: 19px;
-  letter-spacing: 0;
-}
-
-.focus-radio-pay__image {
-  max-width: 100%;
-  display: block;
-  height: 30px;
-  object-fit: contain;
-}
-
-.focus-radio-pay__checked {
-  border: 1px solid #e8e8e8;
-}
-
-.focus-box-summary__image {
-  max-width: 120px;
-} */
-
-/*
-.checkbox {
-  display: flex;
-  align-items: center;
-  position: relative;
-  justify-content: center;
-}
-.checkbox__name {
-  margin-left: 8px;
-  margin-top: 2px;
-  color: black;
-  font-size: 14px;
- font-family: "Lato";
-} */
 
 .text-brown{
   color: #b56b41;
 
 }
-/*
-.checkbox__name a {
-  color: #b56b41;
-}
-.checkbox__content {
-  display: flex;
-  align-items: flex-start;
-  color: #949494;
-  cursor: pointer;
-  position: relative;
-  transition: all 0.15s ease-in-out;
-}
-.checkbox__content:hover .checkbox__box {
-  transition: all 0.15s ease-in-out;
-  border: solid 1px none;
-}
-.checkbox__box {
-  display: inline-block;
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  left: 0;
-  top: 1px;
-  border-radius: 3px;
-  border: solid 1px #d0d0d0;
-}
-.checkbox input[type=checkbox] {
-  opacity: 0;
-}
-.checkbox input[type=checkbox]:checked ~ .checkbox__box {
-  border: solid 1px #b56b41;
-  background-color: #b56b41;
-}
-.checkbox input[type=checkbox]:checked ~ .checkbox__box:before {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "icomoon" !important;
-  content: "\e909";
-  font-size: 10px;
-  color: white;
-}
-.checkbox.white input[type=checkbox]:checked ~ .checkbox__box {
-  border: solid 1px #050505;
-  background-color: transparent;
-}
-.checkbox.white input[type=checkbox]:checked ~ .checkbox__box:before {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "icomoon" !important;
-  content: "\e909";
-  font-size: 13px;
-  color: #050505;
-}
-.checkbox.white .checkbox__box {
-  display: inline-block;
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  left: 0;
-  top: 1px;
-  border-radius: 0px;
-  border: solid 1px #d0d0d0;
-}
-.checkbox.white .checkbox__name {
-  font-size: 13px;
-  color: #050505;
-  text-transform: uppercase;
-} */
-/*
-.radiobutton {
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-.radiobutton__content {
-  display: flex;
-  align-items: center;
-  color: #949494;
-  cursor: pointer;
-  transition: all 0.15s ease-in-out;
-}
-.radiobutton__content:hover .radiobutton__box {
-  transition: all 0.15s ease-in-out;
-  border: solid 1px none;
-}
-.radiobutton__content:hover .radiobutton__name {
-  transition: all 0.15s ease-in-out;
-  color: none;
-}
-.radiobutton__box {
-  display: inline-flex;
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  left: 0;
-  border: solid 1px #d0d0d0;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-}
-.radiobutton input[type=radio] {
-  opacity: 0;
-}
-.radiobutton input[type=radio]:checked ~ .radiobutton__box {
-  border: solid 1px none;
-}
-.radiobutton input[type=radio]:checked ~ .radiobutton__box:before {
-  width: 8px;
-  height: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "icomoon" !important;
-  content: "";
-  font-size: 16px;
-  color: none;
-  background: #000;
-  border-radius: 50%;
-}
-.radiobutton input[type=radio]:checked ~ .radiobutton__name {
-  color: none;
-}
-.radiobutton__name {
-  width: 190px;
-  font-size: 13px;
-  letter-spacing: 1.1px;
-  margin-left: 14px;
-} */
 
 .form__row {
   display: flex;
@@ -4295,59 +4040,6 @@ body.hidden {
   font-family: "Lato";
   letter-spacing: 0.1px;
 }
-/*
-.home-banners-promo {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  max-width: 1250px;
-  justify-content: center;
-  margin: 0 auto;
-}
-@media screen and (min-width: 1100px) {
-  .home-banners-promo {
-    flex-direction: row;
-  }
-}
-
-.home-banners-promo-item {
-  display: block;
-  margin: 0;
-  padding: 10px 20px;
-}
-@media screen and (min-width: 1100px) {
-  .home-banners-promo-item {
-    margin: 10px;
-    padding: 0;
-  }
-}
-
-.home-banners-promo-item.c-1 {
-  width: 100%;
-}
-@media screen and (min-width: 1100px) {
-  .home-banners-promo-item.c-1 {
-    width: calc(33% - 20px);
-  }
-}
-
-.home-banners-promo-item.c-2 {
-  width: 100%;
-}
-@media screen and (min-width: 1100px) {
-  .home-banners-promo-item.c-2 {
-    width: calc(64.6% - 20px);
-  }
-}
-
-.home-banners-promo-item a {
-  display: block;
-}
-
-.home-banners-promo-item a img {
-  display: block;
-  border-radius: 3px;
-} */
 
 .home-instagram {
   display: flex;
